--- a/environment.yml
+++ b/environment.yml
@@ -8,3 +8,4 @@ dependencies:
       - python-dotenv==1.0.0
       - Flask-SQLAlchemy==3.0.3
       - psycopg2-binary==2.9.5
+      - Flask-Migrate==4.0.4
