--- a/environment.yml
+++ b/environment.yml
@@ -9,3 +9,4 @@ dependencies:
       - Flask-SQLAlchemy==3.0.3
       - psycopg2-binary==2.9.5
       - Flask-Migrate==4.0.4
+      - email-validator==1.3.1
